# layai

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_backend.yml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: layout_generator.py
backend/app/templates/layouts/: classic_centered.html.j2  columns_newspaper.html.j2  index.json
backend/tests/: test_routes.py
layai-backend/: pyproject.toml
